Remove most Cinny branding

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cinny</title>
-    <meta name="name" content="Cinny" />
-    <meta name="author" content="Ajay Bura" />
+    <title>Versi</title>
+    <meta name="name" content="Versi" />
+    <meta name="author" content="TrueOG Network" />
     <meta
       name="description"
-      content="A Matrix client where you can enjoy the conversation using simple, elegant and secure interface protected by e2ee with the power of open source."
+      content="A liberated MIT-licensed fork of Cinny 2.2.4 maintained by and for TrueOG Network. "
     />
     <meta
       name="keywords"
-      content="cinny, cinnyapp, cinnychat, matrix, matrix client, matrix.org, element"
+      content="versi, versiapp, versichat, matrix, matrix client, matrix.org"
     />
 
-    <meta property="og:title" content="Cinny" />
-    <meta property="og:url" content="https://cinny.in" />
-    <meta property="og:image" content="https://cinny.in/assets/favicon-48x48.png" />
+    <meta property="og:title" content="Versi" />
+    <meta property="og:url" content="https://chat.true-og.net" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/NotAlexNoyle/Versi/dev/assets/versi-logo-small.png" />
     <meta
       property="og:description"
-      content="A Matrix client where you can enjoy the conversation using simple, elegant and secure interface protected by e2ee with the power of open source."
+      content="A liberated MIT-licensed fork of Cinny 2.2.4 maintained by and for TrueOG Network. "
     />
     <meta name="theme-color" content="#000000" />
 
@@ -29,8 +29,8 @@
 
     <link rel="manifest" href="./manifest.json" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="Cinny" />
-    <meta name="apple-mobile-web-app-title" content="Cinny" />
+    <meta name="application-name" content="Versi" />
+    <meta name="apple-mobile-web-app-title" content="Versi" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
